Fix: alt attribute should not overflow comment avatar if avatar could not be fetched.

--- a/style.css
+++ b/style.css
@@ -521,6 +521,7 @@ fieldset,
     border: 1px solid #aaa;
     margin: 0 .625em .625em;
     padding: 0!important;
+    overflow: hidden;
 }
 
 #colophon small,
